--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ html {
   background-position: center;
   background-repeat: no-repeat;
   height: 600px;
+  display: flex;
 }
 
 .navbar {
@@ -18,7 +19,60 @@ html {
   margin: 0 10px 0 10px;
 }
 
-/* footer {
-  height: 400px;
-  background-color: black;
-} */
+#n1 {
+  /* font-weight: bold; */
+  font-size: 28px;
+}
+
+.innerTitle {
+  width: 40%;
+  margin: auto;
+  align-content: flex-start;
+}
+
+.centerdiv {
+  /* height: 15vh; */
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.icons {
+  height: 55px;
+  width: 55px;
+  background: #F8F8F8;
+  border-radius: 50px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 20px;
+  text-align: center;
+  line-height: 73px;
+  box-shadow: 1px 2.2px 0px 2px #dcdde1;
+}
+
+.fab {
+  transition: all 0.3s linear;
+  color: #282828;
+}
+
+.fa-facebook-f:hover{
+  color: #4267B2;
+  transform: scale(1.3);
+}
+.fa-twitter:hover{
+color: #00acee;
+transform: scale(1.3);
+}
+.fa-instagram:hover{
+color: #cd486b;
+transform: scale(1.3);
+}
+.fa-github:hover{
+  color: black;
+  transform: scale(1.3);
+}
+.fa-linkedin-in:hover{
+color: #0077b5;
+transform: scale(1.3);
+}
