--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,16 @@ html {
   display: flex;
 }
 
+/* #xxx{
+  display: inline-block;
+  background-color: red;
+  width: 70%;
+  height: 400px;
+  margin-top: -50px;
+  margin-left: 20%;
+  margin-right: 20%;
+} */
+
 .navbar {
   font-size: 23px;
 }
@@ -71,3 +81,11 @@ transform: scale(1.3);
 color: #0077b5;
 transform: scale(1.3);
 }
+
+
+/* .about {
+  width: 60%;
+  height: 400px;
+  margin: -50px auto 50px auto;
+  background-color: gold;
+} */
