--- a/styles.css
+++ b/styles.css
@@ -28,13 +28,12 @@ body {
 }
 
 .innerTitle {
-  width: 40%;
+  width: 50%;
   margin: auto;
   align-content: flex-start;
 }
 
 .centerdiv {
-  /* height: 15vh; */
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -84,6 +83,9 @@ body {
   transform: scale(1.3);
 }
 
+
+/* ---------------------------------------ABOUT------------------------------------ */
+
 #secAbout {
   display: flex;
   padding: 5.5rem;
@@ -104,11 +106,26 @@ body {
   /* box-shadow: 5px 3px 8px #888888; */
 }
 
-.about h2 {
+.h2Headings {
   font-size: 3.75rem;
   text-align: center;
   padding: 1.25rem;
   margin-bottom: 20px;
+  color: #555;
+}
+
+.h3Design {
+  text-align: left;
+  font-weight: bold;
+  padding: 1rem;
+  padding-left: 0rem;
+  line-height: 2.5;
+  /* margin: 10px 0 15px 0; */
+}
+
+.hrDesign {
+  width: 60%;
+  margin: auto;
 }
 
 .about p {
@@ -128,4 +145,89 @@ body {
   box-shadow: 0 1rem 2rem rgb(0 0 0 / 17%);
   transition: all .2s;
   margin-top: 2.2rem;
+}
+
+/* ---------------------------------------PROJECTS------------------------------------ */
+
+#secProject {
+  background-color: #f9f9f9;
+}
+
+.projects {
+  width: 60%;
+  margin: 8vh auto;
+  text-align: center;
+  text-align: justify;
+  font-family: Josefin sans, sans-serif;
+  border-radius: 8px;
+  font-size: 1.5rem;
+  font-weight: 300;
+  /* color: #555; */
+  box-sizing: content-box;
+  padding: 5rem;
+  /* box-shadow: 5px 3px 8px #888888; */
+}
+
+.projectDiv {
+  width: 85%;
+  padding: 1.5rem;
+  margin: 1.8rem auto;
+  text-align: justify;
+  text-align: center;
+  border-radius: 8px;
+  font-size: 1.5rem;
+  font-weight: 300;
+  color: #555;
+  box-sizing: content-box;
+  /* box-shadow: 5px 3px 8px #888888; */
+}
+
+.project_P {
+  text-align: left;
+}
+
+.project_icon_div {
+  margin: 10px;
+}
+
+.project_span {
+  line-height: 4;
+  font-weight: bold;
+}
+
+.project_centerdiv {
+  justify-content: flex-end;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+footer {
+  height: 30vh;
+  background-color: black;
 }
