--- a/styles.css
+++ b/styles.css
@@ -83,9 +83,12 @@ body {
   transform: scale(1.3);
 }
 
+.fa-google-play:hover {
+  color: #0077b5;
+  transform: scale(1.3);
+}
 
 /* ---------------------------------------ABOUT------------------------------------ */
-
 #secAbout {
   display: flex;
   padding: 5.5rem;
@@ -119,13 +122,23 @@ body {
   font-weight: bold;
   padding: 1rem;
   padding-left: 0rem;
-  line-height: 2.5;
-  /* margin: 10px 0 15px 0; */
+  text-align: center;
+  /* line-height: 2.5; */
+  /* margin: 200px 0 10px 0; */
+}
+
+.h4Design {
+  text-align: center;
 }
 
 .hrDesign {
-  width: 60%;
+  width: 80%;
   margin: auto;
+}
+
+.hrDesignTwo {
+  margin-bottom: 80px;
+  margin-top: 100px;
 }
 
 .about p {
@@ -148,7 +161,6 @@ body {
 }
 
 /* ---------------------------------------PROJECTS------------------------------------ */
-
 #secProject {
   background-color: #f9f9f9;
 }
@@ -203,29 +215,34 @@ body {
 }
 
 
+/* ---------------------------------------SKILLS------------------------------------ */
 
+.skills {
+  width: 60%;
+  margin: 8vh auto;
+  text-align: center;
+  text-align: justify;
+  font-family: Josefin sans, sans-serif;
+  border-radius: 8px;
+  font-size: 1.5rem;
+  font-weight: 300;
+  /* color: #555; */
+  box-sizing: content-box;
+  padding: 5rem;
+}
 
+.svgDiv {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.svgImg {
+  width: 150px;
+  height: 150px;
+  margin: 15px;
+  padding: 40px;
+}
 
 footer {
   height: 30vh;
