--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,10 @@ body {
   color: #555;
 }
 
+span {
+  font-weight: bold;
+}
+
 .titleBackground {
   background-image: url(src/header.jpg);
   background-size: cover;
@@ -39,6 +43,25 @@ body {
   margin: auto;
   align-content: flex-start;
 }
+
+.innerTitle h1 {
+  color:white;
+  font-size: 3.125rem;
+}
+
+.innerTitle h2 {
+  color:white;
+}
+
+.animate {
+  color: rgb(18, 214, 64);
+}
+
+.innerTitle p {
+  color:white;
+  font-size: 1.438rem;
+}
+
 
 .centerdiv {
   display: flex;
@@ -94,6 +117,7 @@ body {
   color: #0077b5;
   transform: scale(1.3);
 }
+
 
 /* ---------------------------------------ABOUT------------------------------------ */
 #secAbout {
@@ -192,7 +216,7 @@ body {
   padding: 1.5rem;
   margin: 1.8rem auto;
   text-align: justify;
-  text-align: center;
+  /* text-align: center; */
   border-radius: 8px;
   font-size: 1.5rem;
   font-weight: 300;
@@ -251,6 +275,20 @@ body {
   padding: 40px;
 }
 
+/* ---------------------------------------EDUCATION------------------------------------ */
+
+#secEducation {
+  /* height: 40vh;  */
+  background-color: #f9f9f9;
+}
+
+.eduLogo {
+  width: 190px;
+  height: 160px; 
+  margin: 10px 0 40px 0;"
+}
+
+/* ---------------------------------------FOOTER------------------------------------ */
 footer {
   height: 30vh;
   background-color: #293335;
