--- a/styles.css
+++ b/styles.css
@@ -145,7 +145,7 @@ span {
     width: 80%;
     padding: 0;
     font-size: 2.5rem;
-    background-color: #BADA55;
+    /* background-color: #BADA55; */
   }
 
   #secAbout{
@@ -158,8 +158,9 @@ span {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    font-size: 2.2rem;
     height: 40vh;
-    width: 80%;
+    width: 100%;
     display: flex;
   }
 /*
