--- a/styles.css
+++ b/styles.css
@@ -339,8 +339,26 @@ footer {
   align-items: center;
 }
 
+#titleBack h1 {
+  font-size: 4rem;
+}
+
+#titleBack h2 {
+  font-size: 2.5rem;
+}
+
+#titleBack p {
+  font-size: 2.2rem;
+}
+
 .centerdiv {
   justify-content: center;
 }
+
+/* .fab {
+  transition: all 0.3s linear;
+  color: #282828;
+  font-size: 2.1rem;
+} */
 
 }
