--- a/styles.css
+++ b/styles.css
@@ -355,10 +355,13 @@ footer {
   justify-content: center;
 }
 
-/* .fab {
-  transition: all 0.3s linear;
-  color: #282828;
-  font-size: 2.1rem;
-} */
+/* ---------------projects--------------- */
+
+.projects {
+  width: 80%;
+  padding: 0;
+  font-size: 2.5rem;
+  /* background-color: red; */
+}
 
 }
