--- a/styles.css
+++ b/styles.css
@@ -28,11 +28,9 @@ span {
   background-color: transparent;
 }
 
-
 .bgcolor.scrolled {
   background-color: red;
 }
-
 
 .nav-link {
   margin: 0 10px 0 10px;
@@ -50,7 +48,7 @@ span {
 }
 
 .innerTitle h2 {
-  color:white;
+  color: white;
 }
 
 .animate {
@@ -58,10 +56,9 @@ span {
 }
 
 .innerTitle p {
-  color:white;
+  color: white;
   font-size: 1.438rem;
 }
-
 
 .centerdiv {
   display: flex;
@@ -118,7 +115,6 @@ span {
   color: #0077b5;
   transform: scale(1.3);
 }
-
 
 /* ---------------------------------------ABOUT------------------------------------ */
 #secAbout {
@@ -246,9 +242,7 @@ span {
   flex-wrap: wrap;
 }
 
-
 /* ---------------------------------------SKILLS------------------------------------ */
-
 .skills {
   width: 60%;
   margin: 8vh auto;
@@ -277,7 +271,6 @@ span {
 }
 
 /* ---------------------------------------EDUCATION------------------------------------ */
-
 #secEducation {
   /* height: 40vh;  */
   background-color: #f9f9f9;
@@ -286,7 +279,9 @@ span {
 .eduLogo {
   width: 190px;
   height: 160px;
-  margin: 10px 0 40px 0;"
+  margin: 10px 0 40px 0;
+  "
+
 }
 
 /* ---------------------------------------FOOTER------------------------------------ */
@@ -295,9 +290,7 @@ footer {
   background-color: #293335;
 }
 
-
 /* ----------------------------------------MEDIA_QUERY---------------------------------------- */
-
 @media (max-width: 999px) {
   .about {
     width: 80%;
@@ -306,7 +299,7 @@ footer {
     /* background-color: blue; */
   }
 
-  #secAbout{
+  #secAbout {
     padding: 0.5rem 0.1rem;
     /* margin: 100px auto; */
   }
@@ -317,7 +310,6 @@ footer {
   }
 
   /* ------------------------------- */
-
   .titleBackground {
     background-image: url(src/header.jpg);
     background-size: cover;
@@ -334,39 +326,37 @@ footer {
     margin: auto;
     align-content: flex-start;
   }
-#titleBack {
-  text-align: center;
-  justify-content: center;
-  align-items: center;
-}
 
-#titleBack h1 {
-  font-size: 4rem;
-}
+  #titleBack {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+  }
 
-#titleBack h2 {
-  font-size: 2.5rem;
-}
+  #titleBack h1 {
+    font-size: 4rem;
+  }
 
-#titleBack p {
-  font-size: 2.2rem;
-}
+  #titleBack h2 {
+    font-size: 2.5rem;
+  }
 
-.centerdiv {
-  text-align: left;
-  justify-content: center;
-}
+  #titleBack p {
+    font-size: 2.2rem;
+  }
 
-/* ---------------projects--------------- */
+  .centerdiv {
+    text-align: left;
+    justify-content: center;
+  }
 
+  /* ---------------projects--------------- */
+  .h3Design {
+    text-align: left;
+    font-size: 2.8rem;
+  }
 
-.h3Design {
-  text-align: left;
-  font-size: 2.8rem;
-}
-
-.project_P {
-  font-size: 2.5rem;
-}
-
+  .project_P {
+    font-size: 2.5rem;
+  }
 }
