--- a/styles.css
+++ b/styles.css
@@ -359,4 +359,12 @@ footer {
   .project_P {
     font-size: 2.5rem;
   }
+/* --------------------Experience---------------------- */
+  #secExperience p, li {
+    font-size: 2.5rem;
+  }
+
+  #secExperience h3 {
+    font-size: 2.6rem;
+  }
 }
