--- a/styles.css
+++ b/styles.css
@@ -191,6 +191,7 @@ span {
 /* ---------------------------------------PROJECTS------------------------------------ */
 #secProject {
   background-color: #f9f9f9;
+  padding-top: 1.2rem;
 }
 
 .projects {
