--- a/styles.css
+++ b/styles.css
@@ -285,6 +285,11 @@ span {
 
 }
 
+
+#secExperience .about {
+  margin-top: 200px;
+}
+
 /* ---------------------------------------FOOTER------------------------------------ */
 footer {
   /* height: 30vh; */
