--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,17 @@ span {
   font-size: 2.5rem;
 }
 
+.fas {
+  transition: all 0.3s linear;
+  color: #282828;
+  font-size: 2.5rem;
+}
+
+.fa-external-link-alt:hover {
+  color: #4267B2;
+  transform: scale(1.3);
+}
+
 .fa-facebook-f:hover {
   color: #4267B2;
   transform: scale(1.3);
@@ -284,7 +295,6 @@ span {
   "
 
 }
-
 
 #secExperience .about {
   margin-top: 200px;
